fixtures/errors/proxy_get_own_property_descriptor_nonconfigurable_new.js
const proxy = new Proxy({}, {
    getOwnPropertyDescriptor(target, prop) {
        return { value: 1, configurable: false };
    }
});

Reflect.getOwnPropertyDescriptor(proxy, "x");
